# DivaConGold

./: CMakeLists.txt
doc/: harness.bom.tsv  harness.yml
include/peripherals/: TouchSliderLeds.h
lib/: CMakeLists.txt
lib/cap1188/: CMakeLists.txt
lib/is31se5117a/: CMakeLists.txt
lib/mpr121/: CMakeLists.txt
lib/pico_ssd1306/: CMakeLists.txt
lib/pio_ws2812/: CMakeLists.txt
pcb/DivaConIO/: DivaConIO.kicad_pcb  DivaConIO.kicad_pro  DivaConIO.kicad_sch
pcb/DivaConSliderMpr/: DivaConSlider.kicad_pro  DivaConSlider.kicad_sch
src/: CMakeLists.txt
src/peripherals/: TouchSliderLeds.cpp
src/utils/: PS4AuthProvider.cpp
